example/secondfile/objects/Automatic_Countersign__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Control</label>
        <referenceTo>Admin_Control__c</referenceTo>
        <relationshipLabel>Automatic Countersign</relationshipLabel>
        <relationshipName>Automatic_Countersign</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Automatic Countersign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Field_Name__c</columns>
        <columns>Operator__c</columns>
        <columns>Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AUTO-{0000}</displayFormat>
        <label>Automatic Countersign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Automatic Countersign</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>